Archivos trabajados por Jose 2

--- a/index.html
+++ b/index.html
@@ -284,7 +284,9 @@
     <!-- footer -->
     <footer class="footer container">
         <div class="logo-opciones">
-            <h3>cueBanita</h3>
+            <!-- es ESTE renglon o el <a> del renglon siguiente -->
+            <!-- <h3>cueBanita</h3> --> 
+            <a href="integrantes.html" class="logo-footer" title="Click para ver los integrantes">cueBanita</a>
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#masvistas">Mas vistas</a></li>
