--- a/integrantes.html
+++ b/integrantes.html
@@ -33,11 +33,11 @@
     <section id="zona1">
         <!-- Integrantes -->
         <div class="caja">
-            <h1>PROYECTO cueBanita</h1>
+            <h1>PROYECTO CUEBANITA</h1>
             <h2>Integrantes: Grupo#2</h2>
             <ul class="lista-integrantes">
                 <li class="integrante">Mercado Adriana</li>
-                <li class="integrante">Tierno Nicolás</li>
+                <!-- <li class="integrante">Tierno Nicolás</li> -->
                 <li class="integrante">Petrini Sebastian</li>
                 <li class="integrante">Espinola J. Luis</li>
             </ul>
@@ -48,9 +48,9 @@
             <div class="nombre1">
                 ADRIANA
             </div>
-            <div class="nombre2">
+            <!-- <div class="nombre2">
                 NICOLAS
-            </div>
+            </div> -->
             <div class="nombre3">
                 SEBASTIAN
             </div>
