Agregado de modificaciones

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="content">
                     <img src="./img/24.jpg" alt="">
                     <h3>Pelicula hd</h3>
-                    <a href="" target="_blank">Ver</a>
+                    <a href="https://c2.cuevana10.com/peliculas-online/73718/black-adam-heroe-o-villano-online-gratis-en-cuevana/" target="_blank">Ver</a>
                 </div>
             </div>
 
@@ -295,6 +295,11 @@
                 <li><a href="/contacto.html">Contacto</a></li>
             </ul>
         </div>
+
+        <div class="footer-politicas">
+            <a href="/politicas.html">Politicas de Privacidad</a>
+        </div>
+
         <div class="footer-copyright">
             <p class="copyright">Copyright &copy; 2024 - Todos los derechos reservados - Espinola Jose Luis</p>
         </div>
