--- a/src/static/index.html
+++ b/src/static/index.html
@@ -11,7 +11,7 @@
 
 
   <footer id="footer">
-    <link rel="stylesheet" href="/src/static/css/footer.css">
+    <link rel="stylesheet" href="static/css/footer.css">
 
     <div class="inicio">
         <strong><span class="miembros">Codo a Codo - 24262 - Grupo 02</span></strong>
@@ -21,7 +21,7 @@
 
     </div>
     <div class="fin">
-        <a class="icono" href="/src/static/integrantes.html">
+        <a class="icono" href="static/integrantes.html">
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
                 <path fill="currentColor"
                     d="m20.34 9.32l-14-7a3 3 0 0 0-4.08 3.9l2.4 5.37a1.06 1.06 0 0 1 0 .82l-2.4 5.37A3 3 0 0 0 5 22a3.14 3.14 0 0 0 1.35-.32l14-7a3 3 0 0 0 0-5.36Zm-.89 3.57l-14 7a1 1 0 0 1-1.35-1.3l2.39-5.37a2 2 0 0 0 .08-.22h6.89a1 1 0 0 0 0-2H6.57a2 2 0 0 0-.08-.22L4.1 5.41a1 1 0 0 1 1.35-1.3l14 7a1 1 0 0 1 0 1.78Z" />
