--- a/src/static/integrantes.html
+++ b/src/static/integrantes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CueBanita</title>
-    <link rel="shortcut icon" type="Imagen/jpg" href="/src/static/img/icono_cuevana.jpg">
-    <link rel="stylesheet" href="/src/static/css/integrantes.css">
+    <link rel="shortcut icon" type="Imagen/jpg" href="static/img/icono_cuevana.jpg">
+    <link rel="stylesheet" href="static/css/integrantes.css">
 </head>
 <body>
     
@@ -14,7 +14,7 @@
             <a href="#" class="logo">cueBanita</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="/src/static/img/menu.png" class="menu-icono" alt="menu">
+                <img src="static/img/menu.png" class="menu-icono" alt="menu">
             </label>
             <nav class="navbar">
                 <ul>
@@ -61,7 +61,7 @@
         </div>
 
         <!-- Musica de fondo. Lo podría haber puesto en cualquier lugar. Lo puse SIN la opción de mostrar los controles -->
-        <audio id="background-music" src="/src/static/audio/musica-fondo.mp3" autoplay loop>
+        <audio id="background-music" src="static/audio/musica-fondo.mp3" autoplay loop>
             Tu navegador no soporta el elemento de audio.
         </audio>
 
