--- a/src/static/integrantes.html
+++ b/src/static/integrantes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CueBanita</title>
-    <link rel="shortcut icon" type="Imagen/jpg" href="static/img/icono_cuevana.jpg">
+    <link rel="shortcut icon" type="Imagen/jpg" href="./img/icono_cuevana.jpg">
     <link rel="stylesheet" href="static/css/integrantes.css">
 </head>
 <body>
