--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,10 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="static/css/style.css">
+  <title>CaC-24262-Grupo02</title>
 </head>
 <body>
-  <h1>Prueba</h1>
+  <header>
+
+    <nav class="navbar">
+      <ul>
+          <li><a href="/">Inicio</a></li>
+          <li><a href="index.html#masvistas">Listar Peliculas</a></li>
+          <li><a href="index.html#accion">Listar Directores</a></li>
+          <li><a href="index.html#extrenos">Listar Actores</a></li>
+          <li><a href="/contacto.html">Listar Generos</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
 
 
 
