--- a/src/static/integrantes.html
+++ b/src/static/integrantes.html
@@ -18,13 +18,11 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="index.html#masvistas">Mas vistas</a></li>
-                    <li><a href="index.html#accion">Accion</a></li>
-                    <li><a href="index.html#extrenos">Estrenos</a></li>
-                    <li><a href="/contacto.html">Contacto</a></li>
-                    <li><a href="/login.html" class="btn-1">Login</a></li>
-                    <li><a href="/registro.html" class="btn-1">Registro</a></li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="index.html#masvistas">Listar Peliculas</a></li>
+                    <li><a href="index.html#accion">Listar Directores</a></li>
+                    <li><a href="index.html#extrenos">Listar Actores</a></li>
+                    <li><a href="/contacto.html">Listar Generos</a></li>
                 </ul>
             </nav>
         </div>  
