Prueba Listar actores 3

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,7 +15,7 @@
           <li><a href="/">Inicio</a></li>
           <li><a href="/listar_peliculas">Listar Peliculas</a></li>
           <li><a href="/listar_directores">Listar Directores</a></li>
-          <li><a href="/Listar_actores">Listar Actores</a></li>
+          <li><a href="/listar_actores">Listar Actores</a></li>
           <li><a href="/listar_generos">Listar Generos</a></li>
       </ul>
       
