--- a/src/static/listar_actores.html
+++ b/src/static/listar_actores.html
@@ -29,6 +29,7 @@
             <thead>
                 <tr>
                     <th hidden scope="col">id</th>
+                    <th hidden scope="col">nombre</th>
                     <th scope="col">Nombre</th>
                     <th scope="col">Acciones</th>
                 </tr>
