--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,6 +17,7 @@
           <li><a href="/listar_directores">Listar Directores</a></li>
           <li><a href="/listar_actores">Listar Actores</a></li>
           <li><a href="/listar_generos">Listar Generos</a></li>
+          <li><a href="/actor">Agregar Actor</a></li>
       </ul>
       
     </nav>
