--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,7 +17,10 @@
           <li><a href="/listar_directores">Listar Directores</a></li>
           <li><a href="/listar_actores">Listar Actores</a></li>
           <li><a href="/listar_generos">Listar Generos</a></li>
+          <li><a href="/pelicula">Agregar Pelicula</a></li>
           <li><a href="/actor">Agregar Actor</a></li>
+          <li><a href="/director">Agregar Director</a></li>
+          <li><a href="/genero">Agregar Genero</a></li>
       </ul>
       
     </nav>
