--- a/src/static/listar_directores.html
+++ b/src/static/listar_directores.html
@@ -11,16 +11,37 @@
     <header>
 
         <nav class="navbar">
-          <ul>
-              <li><a href="/">Inicio</a></li>
-              <li><a href="/listar_peliculas">Listar Peliculas</a></li>
-              <li><a href="/listar_directores">Listar Directores</a></li>
-              <li><a href="/listar_actores">Listar Actores</a></li>
-              <li><a href="/listar_generos">Listar Generos</a></li>
-          </ul>
+            <ul>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/listar_peliculas">Listar Peliculas</a></li>
+                <li><a href="/listar_directores">Listar Directores</a></li>
+                <li><a href="/listar_actores">Listar Actores</a></li>
+                <li><a href="/listar_generos">Listar Generos</a></li>
+                <li><a href="/pelicula">Agregar Pelicula</a></li>
+                <li><a href="/actor">Agregar Actor</a></li>
+                <li><a href="/director">Agregar Director</a></li>
+                <li><a href="/genero">Agregar Genero</a></li>
+            </ul>
           
         </nav>
     <h1>Listar Directores</h1>
+
+    <div>
+        <table id="tabla-directores">
+            <thead>
+                <tr>
+                    <th hidden scope="col">id</th>
+                    <th hidden scope="col">nombre</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                
+            </tbody>
+        </table>
+
+    </div>
 
 
       </header>
@@ -60,4 +81,5 @@
 
 
 </body>
+<script src="static/js/listar_directores.js"></script>
 </html>
