--- a/src/static/listar_peliculas.html
+++ b/src/static/listar_peliculas.html
@@ -11,13 +11,17 @@
     <header>
 
         <nav class="navbar">
-          <ul>
-              <li><a href="/">Inicio</a></li>
-              <li><a href="/listar_peliculas">Listar Peliculas</a></li>
-              <li><a href="/listar_directores">Listar Directores</a></li>
-              <li><a href="/listar_actores">Listar Actores</a></li>
-              <li><a href="/listar_generos">Listar Generos</a></li>
-          </ul>
+            <ul>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/listar_peliculas">Listar Peliculas</a></li>
+                <li><a href="/listar_directores">Listar Directores</a></li>
+                <li><a href="/listar_actores">Listar Actores</a></li>
+                <li><a href="/listar_generos">Listar Generos</a></li>
+                <li><a href="/pelicula">Agregar Pelicula</a></li>
+                <li><a href="/actor">Agregar Actor</a></li>
+                <li><a href="/director">Agregar Director</a></li>
+                <li><a href="/genero">Agregar Genero</a></li>
+            </ul>
           
         </nav>
     <h1>Listar Películas</h1>
@@ -60,4 +64,5 @@
 
 
 </body>
+<script src="static/js/listar_peliculas.js"></script>
 </html>
