--- a/src/static/listar_generos.html
+++ b/src/static/listar_generos.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/navbar.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&display=swap"
+        rel="stylesheet">
     <title>CaC-24262-Grupo02</title>
 </head>
 <body>
