--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="static/css/style.css">
   <link rel="stylesheet" href="static/css/navbar.css">
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/navbar2.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&display=swap"
         rel="stylesheet">
   <title>CaC-24262-Grupo02</title>
@@ -13,51 +13,48 @@
 <body>
   <header>
 
-    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand">CaC-24262-Grupo02</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <div class="navbar">
+      <a>CaC-24262-Grupo02</a>
+      <a href="/">Home</a>
+      <div class="dropdownPeli">
+        <button class="dropbtnPeli" onclick="myFunctionPeli()">Peliculas
+          <i class="fa fa-caret-down"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarColor02">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link active" href="/">Home
-                <span class="visually-hidden">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Peliculas</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/pelicula">Cargar Peliculas</a>
-                <a class="dropdown-item" href="/listar_peliculas">Listar Peliculas</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Directores</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/director">Cargar Directores</a>
-                <a class="dropdown-item" href="/listar_directores">Listar Directores</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actores</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/actor">Cargar Actores</a>
-                <a class="dropdown-item" href="/listar_actores">Listar Actores</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Generos</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/genero">Cargar Generos</a>
-                <a class="dropdown-item" href="/listar_generos">Listar Generos</a>
-              </div>
-            </li>           
-          </ul>
+        <div class="dropdown-content" id="myDropdownPeli">
+          <a href="/pelicula">Cargar Peliculas</a>
+          <a href="/listar_peliculas">Listar Peliculas</a>
+        </div>
+      </div>  
+      <div class="dropdownActor">
+        <button class="dropbtnActor" onclick="myFunctionActor()">Actores
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content" id="myDropdownActor">
+          <a href="/actor">Cargar Actores</a>
+          <a href="/listar_actores">Listar Actores</a>
         </div>
       </div>
-    </nav>
+      <div class="dropdownDirec">
+        <button class="dropbtnDirec" onclick="myFunctionDirec()">Directores
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content" id="myDropdownDirec">
+          <a href="/director">Cargar Directores</a>
+          <a href="/listar_directores">Listar Directores</a>
+        </div>
+      </div>      
+      <div class="dropdownGenero">
+        <button class="dropbtnGenero" onclick="myFunctionGenero()">Generos
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content" id="myDropdownGenero">
+          <a href="/genero">Cargar Generos</a>
+          <a href="/listar_generos">Listar Generos</a>
+        </div>
+      </div>
+    </div> 
+
+
 
   </header>
 
@@ -90,5 +87,6 @@
     </div>
   </footer>
 
+  <script src="static/js/navbar.js"></script>
 </body>
 </html>
