--- a/src/static/index.html
+++ b/src/static/index.html
@@ -24,6 +24,15 @@
           <a href="/pelicula">Cargar Peliculas</a>
           <a href="/listar_peliculas">Listar Peliculas</a>
         </div>
+        <button class="dropbtnActor" onclick="myFunctionActor()">Actores
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content" id="myDropdownActor">
+          <a href="/actor">Cargar Actores</a>
+          <a href="/listar_actores">Listar Actores</a>
+        </div>
+
+        
       </div>  
       <div class="dropdownActor">
         <button class="dropbtnActor" onclick="myFunctionActor()">Actores
