--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,7 +16,7 @@
     <div class="navbar">
       <a>CaC-24262-Grupo02</a>
       <a href="/">Home</a>
-      <div class="dropdownPeli">
+      <div class="dropdown">
         <button class="dropbtnPeli" onclick="myFunctionPeli()">Peliculas
           <i class="fa fa-caret-down"></i>
         </button>
@@ -31,19 +31,6 @@
           <a href="/actor">Cargar Actores</a>
           <a href="/listar_actores">Listar Actores</a>
         </div>
-
-        
-      </div>  
-      <div class="dropdownActor">
-        <button class="dropbtnActor" onclick="myFunctionActor()">Actores
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content" id="myDropdownActor">
-          <a href="/actor">Cargar Actores</a>
-          <a href="/listar_actores">Listar Actores</a>
-        </div>
-      </div>
-      <div class="dropdownDirec">
         <button class="dropbtnDirec" onclick="myFunctionDirec()">Directores
           <i class="fa fa-caret-down"></i>
         </button>
@@ -51,8 +38,6 @@
           <a href="/director">Cargar Directores</a>
           <a href="/listar_directores">Listar Directores</a>
         </div>
-      </div>      
-      <div class="dropdownGenero">
         <button class="dropbtnGenero" onclick="myFunctionGenero()">Generos
           <i class="fa fa-caret-down"></i>
         </button>
@@ -60,7 +45,7 @@
           <a href="/genero">Cargar Generos</a>
           <a href="/listar_generos">Listar Generos</a>
         </div>
-      </div>
+      </div>     
     </div> 
 
 
