--- a/src/static/index.html
+++ b/src/static/index.html
@@ -48,6 +48,13 @@
       </div>     
     </div> 
 
+    <h1 class="titulo">TP Backend CodoaCodo comisión 24262 - Grupo02</h1>
+    <p class="parrafo"> 
+             Muesta de trtabajo de Backend con uso de Base de datos Postgres, 
+             usando python, flask y gunicorn, desplogado en onrender.com
+    
+    </p>
+
 
 
   </header>
