--- a/src/static/pelicula.html
+++ b/src/static/pelicula.html
@@ -77,8 +77,8 @@
 
                   <div>
                     <label for="generoPelicula" class="form-label mt-4">Genero de la Pelicula</label>                  
-                    <select class="form-select-genero" name="idGenero">
-                        <option selected>Seleccionar Genero</option>
+                    <select class="form-select-genero" id="idGenero" name="idGenero">
+                        <option>Seleccionar Genero</option>
                     </select>                   
                   </div>
 
