--- a/src/static/pelicula.html
+++ b/src/static/pelicula.html
@@ -72,7 +72,7 @@
 
                   <div>
                     <label for="duracionPelicula" class="form-label mt-4">duracion de la Pelicula (minutos)</label>
-                    <input type="number" class="form-control" id="tituloPelicula" placeholder=0>
+                    <input type="number" class="form-control" id="duracionPelicula" placeholder=0>
                   </div>
 
                   <div>
