Pruebas Lista Pelicula

--- a/src/static/listar_peliculas.html
+++ b/src/static/listar_peliculas.html
@@ -48,7 +48,28 @@
             </div>     
           </div> 
       
-    <h1>Listar Películas</h1>
+    <h1>Listado de Películas</h1>
+
+    <div>
+        <table id="tabla-peliculas">
+            <thead>
+                <tr>
+                    <th hidden scope="col">id</th>
+                    <th scope="col">titulo</th>
+                    <th scope="col">sinopsis</th>
+                    <th scope="col">url_pelicula</th>
+                    <th scope="col">ano_extreno</th>
+                    <th scope="col">duracion</th>
+                    <th scope="col">genero</th>
+                    <th scope="col">categoria</th>
+                </tr>
+            </thead>
+            <tbody>
+                
+            </tbody>
+        </table>
+
+    </div>
 
 
       </header>
