--- a/src/static/listar_actores.html
+++ b/src/static/listar_actores.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Actores</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/navbar2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="static/css/listar.css">
+    <title>CaC-24262-Grupo02</title>
 </head>
 <body>
 
@@ -48,7 +48,7 @@
           </div>
         </div>     
       </div> 
-  
+      <h1>Listado de Actores</h1>
 
     <div>
         <table id="tabla-actores">
