--- a/src/static/listar_directores.html
+++ b/src/static/listar_directores.html
@@ -48,7 +48,7 @@
             </div>     
           </div> 
       
-    <h1>Listar Directores</h1>
+    <h1>Listado de Directores</h1>
 
     <div>
         <table id="tabla-directores">
