--- a/src/static/listar_generos.html
+++ b/src/static/listar_generos.html
@@ -48,7 +48,7 @@
             </div>     
           </div> 
       
-    <h1>Listar Géneros</h1>
+    <h1>Listado de Géneros</h1>
 
     <div>
         <table id="tabla-generos">
